--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -34,7 +35,9 @@
     "prettier": "^2.8.8",
     "typescript": "~5.0.4",
     "vite": "^4.3.4",
+    "vite-plugin-windicss": "^1.9.0",
     "vitest": "^0.31.0",
-    "vue-tsc": "^1.6.4"
+    "vue-tsc": "^1.6.4",
+    "windicss": "^3.5.6"
   }
 }
