--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.0",
     "@types/jsdom": "^21.1.1",
@@ -33,6 +34,7 @@
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.4",
     "vite-plugin-windicss": "^1.9.0",
