--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "notiflix": "^3.2.6",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
