--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "notiflix": "^3.2.6",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
