--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,9 +1,9 @@
 {
-  "extends": "./tsconfig.app.json",
-  "exclude": [],
-  "compilerOptions": {
-    "composite": true,
-    "lib": [],
-    "types": ["node", "jsdom"]
-  }
+    "extends": "./tsconfig.app.json",
+    "exclude": [],
+    "compilerOptions": {
+        "composite": true,
+        "lib": ["ES2023"],
+        "types": ["node", "jsdom"]
+    }
 }
