--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "notiflix": "^3.2.6",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
